--- a/packages/sdk-release-kit/package.json
+++ b/packages/sdk-release-kit/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "test": "mocha test/**/*.spec.js",
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc"
+    "lint": "eslint . --ext .js"
   },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
@@ -33,6 +33,11 @@
     "yargs": "^15.0.2"
   },
   "devDependencies": {
-    "mocha": "^6.2.2"
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "mocha": "^6.2.2",
+    "prettier": "^2.1.2"
   }
 }
