--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "mocha test/**/*.spec.js",
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc"
+    "lint": "eslint . --ext .js"
   },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
@@ -42,10 +42,9 @@
   "devDependencies": {
     "eslint": "^6.6.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-mocha-no-only": "^1.1.0",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-testcafe": "^0.2.1",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "js-yaml": "^3.13.1",
     "open": "^7.0.3",
     "prettier": "^1.18.2",
