--- a/packages/sdk-shared/.eslintrc
+++ b/packages/sdk-shared/.eslintrc
@@ -21,7 +21,7 @@
     "**/test/coverage/generic/"
   ],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": ["error", {"arrowParens": "avoid"}],
     "no-process-exit": "off",
     "no-const-assign": "error",
     "no-this-before-super": "error",
