--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -19,7 +19,8 @@
     "cypress:play": "cd test/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js --spec=cypress/integration-play/play.js",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
-    "postversion": "bongo postversion --skip-release-notification"
+    "postversion": "bongo postversion --skip-release-notification",
+    "deps": "bongo deps"
   },
   "files": [
     "src",
@@ -37,19 +38,19 @@
     "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
   },
   "dependencies": {
-    "@applitools/dom-snapshot": "4.0.5",
-    "@applitools/eyes-sdk-core": "12.1.4",
-    "@applitools/functional-commons": "1.5.4",
-    "@applitools/visual-grid-client": "14.7.5",
-    "body-parser": "^1.19.0",
+    "@applitools/dom-snapshot": "4.0.6",
+    "@applitools/eyes-sdk-core": "12.2.5",
+    "@applitools/functional-commons": "1.6.0",
+    "@applitools/visual-grid-client": "15.0.5",
+    "body-parser": "1.19.0",
     "chalk": "3.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "lodash.flatten": "^4.4.0"
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "lodash.flatten": "4.4.0"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.2.2",
-    "@applitools/sdk-shared": "0.1.0",
+    "@applitools/sdk-release-kit": "^0.2.2",
+    "@applitools/sdk-shared": "^0.1.0",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "cookie-parser": "^1.4.4",
