--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -36,14 +36,14 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/eyes-sdk-core": "12.2.3",
-    "@applitools/visual-grid-client": "15.0.3"
+    "@applitools/eyes-sdk-core": "12.2.5",
+    "@applitools/visual-grid-client": "15.0.5"
   },
   "devDependencies": {
-    "@applitools/sdk-coverage-tests": "1.0.14",
+    "@applitools/sdk-coverage-tests": "^1.0.14",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
-    "@applitools/sdk-release-kit": "0.2.2",
-    "@applitools/sdk-shared": "0.1.0",
+    "@applitools/sdk-release-kit": "^0.2.2",
+    "@applitools/sdk-shared": "^0.1.0",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
@@ -75,7 +75,8 @@
     "test:coverage": "yarn docker:setup && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js; yarn docker:teardown",
     "preversion": "bongo preversion && yarn test && yarn coverage:prod",
     "version": "bongo version",
-    "postversion": "bongo postversion"
+    "postversion": "bongo postversion",
+    "deps": "bongo deps"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
