--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -31,18 +31,18 @@
     "index.d.ts"
   ],
   "dependencies": {
-    "@applitools/eyes-sdk-core": "12.2.4",
-    "@applitools/functional-commons": "1.5.4",
-    "@applitools/http-commons": "2.3.12",
+    "@applitools/eyes-sdk-core": "12.2.5",
+    "@applitools/functional-commons": "1.6.0",
+    "@applitools/http-commons": "2.4.3",
     "@applitools/isomorphic-fetch": "3.0.0",
     "@applitools/jsdom": "1.0.2",
     "chalk": "3.0.0",
     "he": "1.2.0",
-    "lodash.mapvalues": "^4.6.0",
-    "mime-types": "^2.1.24",
-    "mkdirp": "^0.5.1",
-    "postcss-value-parser": "^4.0.2",
-    "throat": "^5.0.0"
+    "lodash.mapvalues": "4.6.0",
+    "mime-types": "2.1.27",
+    "mkdirp": "0.5.5",
+    "postcss-value-parser": "4.1.0",
+    "throat": "5.0.0"
   },
   "browser": {
     "@applitools/jsdom": false
@@ -77,7 +77,8 @@
     "render": "node example/render.js",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
-    "postversion": "bongo postversion --skip-release-notification"
+    "postversion": "bongo postversion --skip-release-notification",
+    "deps": "bongo deps"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
