--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -55,17 +55,22 @@
     "chai-spies": "^1.0.0",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
     "mocha": "^8.0.1",
     "morgan": "^1.9.1",
     "nock": "^11.3.5",
     "node-fetch": "^2.6.0",
+    "prettier": "1.19.0",
     "puppeteer": "^1.20.0",
     "typescript": "^3.9.2",
     "ua-parser-js": "^0.7.20"
   },
   "scripts": {
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js",
     "test:mocha": "mocha --no-timeouts --parallel --jobs 15 \"test/**/*.test.js\"",
     "test:sanity": "mocha --no-timeouts 'test/!(browser||e2e)/**/*.test.js'",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.test.js\"",
