--- a/packages/eyes-images/package.json
+++ b/packages/eyes-images/package.json
@@ -37,10 +37,15 @@
     "@applitools/sdk-release-kit": "^0.2.2",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
-    "mocha": "^8.0.1"
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "mocha": "^8.0.1",
+    "prettier": "1.19.0"
   },
   "scripts": {
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js",
     "test": "mocha --no-timeouts --parallel --jobs 15 \"test/**/*.spec.js\"",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
