--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -50,10 +50,15 @@
     "chai-as-promised": "^7.1.1",
     "chromedriver": "^81.0.0",
     "cors": "^2.8.5",
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.0.1",
     "ncp": "^2.0.0",
     "nock": "^12.0.3",
     "node-fetch": "^2.6.0",
+    "prettier": "1.19.0",
     "protractor": "^7.0.0",
     "spec-xunit-file": "0.0.1-3",
     "yargs": "^15.3.1"
@@ -62,7 +67,7 @@
     "protractor": ">=5.4.4"
   },
   "scripts": {
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js",
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
     "test:it": "mocha --timeout 120000 './test/it/**/*.spec.js'",
