--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -54,16 +54,21 @@
     "chai": "4.2.0",
     "chai-uuid": "1.0.6",
     "chromedriver": "^83.0.0",
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "jsdoc": "3.6.4",
     "mocha": "^8.0.1",
     "ncp": "^2.0.0",
+    "prettier": "1.19.0",
     "typescript": "^3.9.5"
   },
   "browser": {
     "tunnel": false
   },
   "scripts": {
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js",
     "test": "mocha --no-timeouts --parallel --jobs 15 \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
