--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -49,9 +49,14 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chromedriver": "^84.0.0",
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.0.1",
     "module-alias": "^2.2.2",
     "ncp": "^2.0.0",
+    "prettier": "^1.19.0",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "selenium-webdriver-3": "npm:selenium-webdriver@^3.6.0",
     "selenium-webdriver-4": "npm:selenium-webdriver@^4.0.0-alpha.7",
@@ -62,7 +67,7 @@
     "selenium-webdriver": ">=3.6.0"
   },
   "scripts": {
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js",
     "render": "node ../sdk-shared/src/render.js",
     "capture-dom": "node ../sdk-shared/src/capture-dom.js",
     "test": "yarn test:it",
