--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -7,7 +7,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js",
     "test": "wdio test/wdio.conf.js",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
