--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -30,11 +30,16 @@
     "@wdio/mocha-framework": "5.18.6",
     "@wdio/sync": "5.18.6",
     "chromedriver": "^83.0.0",
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^6.2.2",
+    "prettier": "1.19.0",
     "wdio-chromedriver-service": "^5.0.2"
   },
   "scripts": {
-    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
+    "lint": "eslint . --ext .js",
     "test": "wdio tests/wdio.conf.js",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
