add changelog and auto commit to yarn deps

--- a/packages/sdk-release-kit/package.json
+++ b/packages/sdk-release-kit/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "test": "mocha test/**/*.spec.js",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint . --ext .js",
+    "deps": "bongo deps"
   },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
