--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "handlebars": "^4.7.6",
     "morgan": "^1.10.0",
     "ncp": "2.0.0",
     "yargs": "^15.3.1"
