cypress: fix lint -- .eslintignore was not ignoring the test fixture directories as configured

--- a/packages/eyes-cypress/.eslintignore
+++ b/packages/eyes-cypress/.eslintignore
@@ -1,7 +1,2 @@
 /commands.js
-packages/eyes-cypress/test/fixtures/testApp/cypress/support
-packages/eyes-cypress/test/fixtures/testApp/cypress/integration-run
-packages/eyes-cypress/test/fixtures/testApp/cypress/integration-pack
-packages/eyes-cypress/test/fixtures/testApp/cypress/integration-timeout
-packages/eyes-cypress/test/fixtures/testApp/cypress/examples
-packages/eyes-cypress/test/it/setup/fixtures/cypress/
+**/fixtures
