--- a/packages/eyes-storybook/.eslintignore
+++ b/packages/eyes-storybook/.eslintignore
@@ -1,6 +1,6 @@
-packages/eyes-storybook/test/fixtures/appWithStorybook
-packages/eyes-storybook/test/fixtures/heavyStorybook
-packages/eyes-storybook/test/fixtures/singleStorybook
-packages/eyes-storybook/test/fixtures/accessibilityStorybook
-packages/eyes-storybook/dist
-packages/eyes-storybook/logs
+test/fixtures/appWithStorybook
+test/fixtures/heavyStorybook
+test/fixtures/singleStorybook
+test/fixtures/accessibilityStorybook
+dist
+logs
