--- a/packages/sdk-fake-eyes-server/package.json
+++ b/packages/sdk-fake-eyes-server/package.json
@@ -42,12 +42,12 @@
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "filenamify": "^4.1.0",
-    "node-fetch": "^2.6.0",
-    "ua-parser-js": "^0.7.21",
-    "uuid": "^3.3.3",
-    "zlib": "^1.0.5"
+    "express": "4.17.1",
+    "filenamify": "4.1.0",
+    "node-fetch": "2.6.0",
+    "ua-parser-js": "0.7.21",
+    "uuid": "3.3.3",
+    "zlib": "1.0.5"
   },
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.2.2",
