--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -41,11 +41,15 @@
   "devDependencies": {
     "@applitools/sdk-coverage-tests": "^1.0.7",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
-    "@applitools/sdk-release-kit": "0.2.2",
-    "@applitools/sdk-shared": "0.1.0",
-    "eslint": "^7.2.0",
+    "@applitools/sdk-release-kit": "^0.2.2",
+    "@applitools/sdk-shared": "^0.1.2",
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.0.1",
     "playwright": "^1.0.0",
+    "prettier": "1.19.0",
     "spec-xunit-file": "0.0.1-3"
   },
   "scripts": {
