--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -44,10 +44,14 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chromedriver": "^85.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "geckodriver": "^1.19.1",
     "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
+    "prettier": "1.19.0",
     "shared-examples-for": "^0.1.3",
     "spec-xunit-file": "0.0.1-3",
     "webdriverio": "~4.14.4"
