--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -41,8 +41,8 @@
   "devDependencies": {
     "@applitools/sdk-coverage-tests": "^1.0.14",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
-    "@applitools/sdk-release-kit": "0.2.2",
-    "@applitools/sdk-shared": "0.1.0",
+    "@applitools/sdk-release-kit": "^0.2.2",
+    "@applitools/sdk-shared": "^0.1.0",
     "@wdio/cli": "5.18.6",
     "@wdio/dot-reporter": "5.18.6",
     "@wdio/local-runner": "5.18.6",
@@ -61,7 +61,7 @@
     "geckodriver": "^1.19.1",
     "mocha": "^8.0.1",
     "module-alias": "^2.2.2",
-    "prettier": "^2.0.5",
+    "prettier": "1.19.0",
     "shared-examples-for": "^0.1.3",
     "spec-xunit-file": "0.0.1-3",
     "typescript": "^3.9.6",
