--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -18,28 +18,33 @@
   },
   "scripts": {
     "test": "mocha test/**/*.spec.js",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint . --ext .js",
+    "preversion": "bongo preversion && yarn test",
+    "version": "bongo version",
+    "postversion": "bongo postversion",
+    "deps": "bongo deps"
   },
   "bugs": {
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
   "dependencies": {
     "@applitools/functional-commons": "1.5.4",
-    "@applitools/sdk-coverage-tests": "^1.0.13",
-    "axios": "^0.20.0",
+    "@applitools/sdk-coverage-tests": "1.0.13",
+    "axios": "0.20.0",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chalk": "3.0.0",
-    "chromedriver": "^83.0.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "filenamify": "^4.1.0",
-    "morgan": "^1.10.0",
+    "chromedriver": "83.0.0",
+    "cookie-parser": "1.4.5",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "filenamify": "4.1.0",
+    "morgan": "1.10.0",
     "ncp": "2.0.0",
-    "yargs": "^15.3.1"
+    "yargs": "15.3.1"
   },
   "devDependencies": {
+    "@applitools/sdk-release-kit": "^0.2.2",
     "eslint": "^6.6.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-mocha-no-only": "^1.1.1",
