--- a/packages/snippets/package.json
+++ b/packages/snippets/package.json
@@ -21,15 +21,20 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.2.2",
+    "@applitools/sdk-release-kit": "^0.2.2",
     "@applitools/sdk-shared": "^0.1.0",
     "@babel/preset-env": "^7.11.5",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.0.0",
     "chalk": "^4.1.0",
+    "eslint": "^7.9.0",
+    "eslint-plugin-mocha-no-only": "^1.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "playwright": "1.1.1",
+    "prettier": "1.19.0",
     "rollup": "^2.26.11",
     "rollup-plugin-terser": "^7.0.2",
     "webdriverio": "^6.1.24",
