--- a/packages/eyes-cypress/.eslintignore
+++ b/packages/eyes-cypress/.eslintignore
@@ -1,8 +1,3 @@
 /commands.js
-test/fixtures/testApp/cypress/support
-test/fixtures/testApp/cypress/plugins
-test/fixtures/testApp/cypress/integration-run
-test/fixtures/testApp/cypress/integration-pack
-test/fixtures/testApp/cypress/integration-timeout
-test/fixtures/testApp/cypress/examples
+test/fixtures/**
 test/it/setup/fixtures/cypress/
