--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -48,7 +48,7 @@
   },
   "devDependencies": {
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
-    "@applitools/sdk-release-kit": "0.2.2",
+    "@applitools/sdk-release-kit": "^0.3.1",
     "@applitools/visual-grid-client": "15.0.3",
     "assert-rejects": "1.0.0",
     "chai": "4.2.0",
