--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -23,7 +23,7 @@
     "@applitools/eyes-webdriverio": "5.22.2"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.2.2",
+    "@applitools/sdk-release-kit": "^0.3.1",
     "@wdio/cli": "5.18.6",
     "@wdio/dot-reporter": "5.18.6",
     "@wdio/local-runner": "5.18.6",
@@ -43,7 +43,8 @@
     "test": "wdio tests/wdio.conf.js",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
-    "postversion": "bongo postversion --skip-release-notification"
+    "postversion": "bongo postversion --skip-release-notification",
+    "deps": "bongo deps"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
