--- a/packages/sdk-release-kit/package.json
+++ b/packages/sdk-release-kit/package.json
@@ -28,12 +28,12 @@
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
   "dependencies": {
-    "@applitools/sdk-shared": "0.1.1",
+    "@applitools/sdk-shared": "0.1.3",
     "chalk": "3.0.0",
     "lodash.pickby": "4.6.0",
-    "micromatch": "^4.0.2",
-    "node-fetch": "^2.6.0",
-    "yargs": "^15.0.2"
+    "micromatch": "4.0.2",
+    "node-fetch": "2.6.0",
+    "yargs": "15.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
