--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -48,9 +48,9 @@
     "@applitools/jsdom": false
   },
   "devDependencies": {
-    "@applitools/dom-snapshot": "4.0.5",
-    "@applitools/sdk-release-kit": "0.2.2",
-    "@applitools/sdk-shared": "0.1.0",
+    "@applitools/dom-snapshot": "^4.0.5",
+    "@applitools/sdk-release-kit": "^0.3.1",
+    "@applitools/sdk-shared": "^0.1.0",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "cookie-parser": "^1.4.4",
