--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "update": "bongo vv --fix && yarn",
-    "lint": "eslint '**/*.js'",
+    "lint": "eslint . --ext .js",
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
     "test:unit": "mocha --no-timeouts ./test/unit/*.spec.js",
@@ -22,7 +22,10 @@
     "test:coverage:debug": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/coverage/generic --reporter spec,xunit:coverage-test-report.xml --inspect-brk",
     "test:coverage:docker": "docker run --env APPLITOOLS_SHOW_LOGS=true --env APPLITOOLS_API_KEY=\"$APPLITOOLS_API_KEY_SDK\" --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' --env APPLITOOLS_BATCH_ID=$(uuidgen) -v $(pwd):/tests -w /tests -it testcafe/testcafe chromium test/coverage/generic",
     "test:coverage:firefox": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe firefox:headless test/coverage/generic --reporter spec,xunit:coverage-test-report.xml",
-    "test:coverage:firefox:full": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe firefox test/coverage/generic --reporter spec,xunit:coverage-test-report.xml"
+    "test:coverage:firefox:full": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe firefox test/coverage/generic --reporter spec,xunit:coverage-test-report.xml",
+    "version": "bongo version",
+    "postversion": "bongo postversion",
+    "deps": "bongo deps"
   },
   "keywords": [
     "eyes-testcafe",
