tc: cleaned up coverage tests scripts

--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -17,12 +17,9 @@
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/coverage/generic --reporter spec,xunit:coverage-test-report.xml",
-    "test:coverage:full": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome test/coverage/generic --reporter spec,xunit:coverage-test-report.xml",
-    "test:coverage:debug": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe chrome:headless test/coverage/generic --reporter spec,xunit:coverage-test-report.xml --inspect-brk",
-    "test:coverage:docker": "docker run --env APPLITOOLS_SHOW_LOGS=true --env APPLITOOLS_API_KEY=\"$APPLITOOLS_API_KEY_SDK\" --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' --env APPLITOOLS_BATCH_ID=$(uuidgen) -v $(pwd):/tests -w /tests -it testcafe/testcafe chromium test/coverage/generic",
-    "test:coverage:firefox": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe firefox:headless test/coverage/generic --reporter spec,xunit:coverage-test-report.xml",
-    "test:coverage:firefox:full": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe firefox test/coverage/generic --reporter spec,xunit:coverage-test-report.xml",
+    "test:coverage": "docker run --env APPLITOOLS_SHOW_LOGS=true --env APPLITOOLS_API_KEY=\"$APPLITOOLS_API_KEY_SDK\" --env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' --env APPLITOOLS_BATCH_ID=$(uuidgen) -v $(pwd):/tests -w /tests -it testcafe/testcafe chromium test/coverage/generic",
+    "test:coverage:local": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe $BROWSER test/coverage/generic --reporter spec,xunit:coverage-test-report.xml",
+    "test:coverage:local:debug": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-testcafe' APPLITOOLS_BATCH_ID=$(uuidgen) testcafe $BROWSER test/coverage/generic --reporter spec,xunit:coverage-test-report.xml --inspect-brk",
     "version": "bongo version",
     "postversion": "bongo postversion",
     "deps": "bongo deps"
