--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -54,7 +54,7 @@
     "@applitools/sdk-coverage-tests": "^1.0.7",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.2.2",
-    "@applitools/sdk-shared": "0.1.1",
+    "@applitools/sdk-shared": "file:../sdk-shared",
     "eslint": "^7.2.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
