--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -8,6 +8,9 @@
     "lib": "./src",
     "test": "./test"
   },
+  "bin": {
+    "render": "./scripts/render.js"
+  },
   "description": "General place for shared SDK things for development purposes",
   "author": "Applitools team <team@applitools.com>",
   "homepage": "https://github.com/applitools/eyes.sdk.javascript1#readme",
