make tests pass in cypress

--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -11,13 +11,13 @@
     "test:mocha": "mocha --no-timeouts --parallel --jobs 15 'test/**/*.test.js'",
     "test:unit": "mocha --no-timeouts 'test/unit/**/*.test.js'",
     "test:it": "mocha --no-timeouts 'test/it/**/*.test.js'",
-    "test:e2e": "mocha --no-timeouts 'test/e2e/**/*.test.js'",
+    "test:e2e": "mocha --no-timeouts --parallel --jobs 15 'test/e2e/**/*.test.js'",
     "lint": "eslint '**/*.js'",
     "test": "yarn test:mocha && yarn lint",
     "cypress": "cd test/fixtures/testApp && cypress open --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js",
     "cypress:run": "cd test/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-run,pluginsFile=cypress/plugins/index-run.js,supportFile=cypress/support/index-run.js",
     "cypress:play": "cd test/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js --spec=cypress/integration-play/play.js",
-    "preversion": "bongo preversion && yarn test",
+    "preversion": "bongo preversion --skip-deps && yarn test",
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification",
     "deps": "bongo deps"
