--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -77,7 +77,7 @@
     "test:it": "mocha -r ./test/util/version-alias.js --no-timeouts \"test/it/*.js\"",
     "test:service": "wdio \"test/service/wdio.conf.js\" && wdio \"test/service/no-config/wdio.no-config.conf.js\" && wdio \"test/service/vg/wdio.vg.conf.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\"",
-    "coverage:generate": "coverage-tests create-tests",
+    "coverage:generate": "coverage-tests generate -c ./tests/coverage/index.js",
     "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
     "docker:setup": "node ../sdk-shared/src/generate-docker-compose-config.js && docker-compose up -d",
