--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -48,7 +48,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.0.1",
-    "playwright": "^1.0.0",
+    "playwright": "1.4.2",
     "prettier": "1.19.0",
     "spec-xunit-file": "0.0.1-3"
   },
