--- a/packages/eyes-nightwatch/package.json
+++ b/packages/eyes-nightwatch/package.json
@@ -47,7 +47,8 @@
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chromedriver": "^81.0.0",
+    "chromedriver": "^86.0.0",
+    "geckodriver": "^1.20.0",
     "cors": "^2.8.5",
     "eslint": "^7.9.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
@@ -69,7 +70,7 @@
     "lint": "eslint . --ext .js",
     "render": "node ../sdk-shared/scripts/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha --timeout 120000 './test/it/**/*.spec.js'",
+    "test:it": "nightwatch test/it/spec-driver.spec.js",
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
