--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -45,6 +45,7 @@
     "handlebars": "4.7.6",
     "morgan": "1.10.0",
     "ncp": "2.0.0",
+    "node-fetch": "^2.6.1",
     "yargs": "15.3.1"
   },
   "devDependencies": {
