--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -61,6 +61,7 @@
     "jsdoc": "3.6.4",
     "mocha": "^8.0.1",
     "ncp": "^2.0.0",
+    "nock": "^13.0.4",
     "prettier": "1.19.0",
     "typescript": "^3.9.5"
   },
