--- a/packages/eyes-nightwatch/package.json
+++ b/packages/eyes-nightwatch/package.json
@@ -70,8 +70,9 @@
     "lint": "eslint . --ext .js",
     "render": "node ../sdk-shared/scripts/render.js",
     "test": "yarn test:it",
-    "test:it": "yarn test:it:headless && yarn test:it:headed && yarn test:it:mobile",
-    "test:it:headless": "nightwatch --env default test/it/spec-driver-headless-desktop.spec.js",
+    "test:it": "yarn test:it:headless:jwp && yarn test:it:headless:w3c && yarn test:it:headed && yarn test:it:mobile",
+    "test:it:headless:jwp": "nightwatch --env chrome.headless test/it/spec-driver-headless-desktop.spec.js",
+    "test:it:headless:w3c": "nightwatch --env firefox.headless test/it/spec-driver-headless-desktop.spec.js",
     "test:it:headed": "nightwatch --env firefox test/it/spec-driver-onscreen-desktop.spec.js",
     "test:it:mobile": "nightwatch test/it/spec-driver-mobile.spec.js",
     "coverage:generate": "coverage-tests create-tests",
