--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -40,10 +40,10 @@
     "@applitools/visual-grid-client": "15.0.12"
   },
   "devDependencies": {
-    "@applitools/sdk-coverage-tests": "^1.0.14",
-    "@applitools/sdk-fake-eyes-server": "^2.0.0",
-    "@applitools/sdk-release-kit": "^0.4.1",
-    "@applitools/sdk-shared": "^0.3.0",
+    "@applitools/sdk-coverage-tests": "link:../sdk-coverage-tests",
+    "@applitools/sdk-fake-eyes-server": "link:../sdk-fake-eyes-server",
+    "@applitools/sdk-release-kit": "link:../sdk-release-kit",
+    "@applitools/sdk-shared": "link:../sdk-shared",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
