nw: drop -- from scripts since they are not needed and trigger warnings in the run output

--- a/packages/eyes-nightwatch/package.json
+++ b/packages/eyes-nightwatch/package.json
@@ -72,10 +72,10 @@
     "render": "node ../sdk-shared/scripts/render.js",
     "test": "yarn test:it",
     "test:it": "yarn test:it:headless:jwp && yarn test:it:headless:w3c && yarn test:it:headed && yarn test:it:mobile",
-    "test:it:headless:jwp": "yarn nightwatch -- --env chrome.headless test/it/spec-driver-headless-desktop.spec.js",
-    "test:it:headless:w3c": "yarn nightwatch -- --env firefox.headless test/it/spec-driver-headless-desktop.spec.js",
-    "test:it:headed": "yarn nightwatch -- --env firefox test/it/spec-driver-onscreen-desktop.spec.js",
-    "test:it:mobile": "yarn nightwatch -- test/it/spec-driver-mobile.spec.js",
+    "test:it:headless:jwp": "yarn nightwatch --env chrome.headless test/it/spec-driver-headless-desktop.spec.js",
+    "test:it:headless:w3c": "yarn nightwatch --env firefox.headless test/it/spec-driver-headless-desktop.spec.js",
+    "test:it:headed": "yarn nightwatch --env firefox test/it/spec-driver-onscreen-desktop.spec.js",
+    "test:it:mobile": "yarn nightwatch test/it/spec-driver-mobile.spec.js",
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
