nw: added shorter script for running nightwatch

--- a/packages/eyes-nightwatch/package.json
+++ b/packages/eyes-nightwatch/package.json
@@ -68,6 +68,7 @@
   },
   "scripts": {
     "nightwatch": "nightwatch --config test/nightwatch.conf.js",
+    "nw": "yarn nightwatch",
     "lint": "eslint . --ext .js",
     "render": "node ../sdk-shared/scripts/render.js",
     "test": "yarn test:it",
