render script: save to file

--- a/packages/eyes-webdriverio-5/.eslintrc
+++ b/packages/eyes-webdriverio-5/.eslintrc
@@ -18,7 +18,7 @@
     "applitools.config.js",
     "logs",
     "tmp/",
-    "**/test/generic/"
+    "**/generic/"
   ],
   "rules": {
     "prettier/prettier": "error",
