--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@applitools/functional-commons": "1.6.0",
+    "@applitools/sdk-coverage-tests": "^2.0.0",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chalk": "3.0.0",
