--- a/packages/eyes-api/tsconfig.json
+++ b/packages/eyes-api/tsconfig.json
@@ -7,5 +7,6 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "experimentalDecorators": true,
+    "downlevelIteration": true
   },
 }
