chore: update release kit

--- a/packages/eyes-selenium-3/package.json
+++ b/packages/eyes-selenium-3/package.json
@@ -48,7 +48,7 @@
     "@applitools/eyes-sdk-core-legacy": "1.0.1"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.2.2",
+    "@applitools/sdk-release-kit": "^0.5.3",
     "@types/node": "*",
     "axios": "^0.19.2",
     "chai": "^4.2.0",
