--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@applitools/eyes-sdk-core": "12.4.2",
     "@applitools/visual-grid-client": "15.0.10",
+    "chalk": "^4.1.0",
     "uuid": "^8.3.1",
     "ws": "^7.3.1"
   },
@@ -48,6 +49,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.0.1",
+    "pkg": "^4.4.9",
     "playwright": "1.4.2",
     "prettier": "1.19.0",
     "spec-xunit-file": "0.0.1-3"
