--- a/packages/eyes-api/package.json
+++ b/packages/eyes-api/package.json
@@ -27,7 +27,7 @@
     "lib": "./lib",
     "test": "./test"
   },
-  "main": "./index.js",
+  "main": "./dist/index.js",
   "dependencies": {},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.7.0",
